// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobDetail: Component should render correctly 1`] = `
<Fragment>
  <MobileMenu
    headerSubtitle={
      <Memo(FormattedMessage)
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    headerTitle={
      <Memo(FormattedMessage)
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Projects"
            id="jobDetail.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <Memo(FormattedMessage)
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    title={
      <Memo(FormattedMessage)
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackLink
      to="/datasource/undefined/job"
    >
      <MemoizedFormattedMessage
        defaultMessage="Back"
        id="jobDetail.back"
      />
    </BackLink>
    <NextButton
      disabled={false}
      loading={false}
      onClick={[Function]}
    >
      <MemoizedFormattedMessage
        defaultMessage="Save"
        id="jobDetail.save"
      />
    </NextButton>
  </NavigationContainer>
</Fragment>
`;

exports[`JobDetail: Component should render correctly with failure job 1`] = `
<Fragment>
  <MobileMenu
    headerSubtitle={
      <Memo(FormattedMessage)
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    headerTitle={
      <Memo(FormattedMessage)
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Projects"
            id="jobDetail.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <Memo(FormattedMessage)
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    title={
      <Memo(FormattedMessage)
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackLink
      to="/datasource/undefined/job"
    >
      <MemoizedFormattedMessage
        defaultMessage="Back"
        id="jobDetail.back"
      />
    </BackLink>
    <NextButton
      disabled={false}
      loading={false}
      onClick={[Function]}
    >
      <MemoizedFormattedMessage
        defaultMessage="Save"
        id="jobDetail.save"
      />
    </NextButton>
  </NavigationContainer>
</Fragment>
`;

exports[`JobDetail: Component should render correctly with fake job 1`] = `
<Fragment>
  <MobileMenu
    headerSubtitle={
      <Memo(FormattedMessage)
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    headerTitle={
      <Memo(FormattedMessage)
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Projects"
            id="jobDetail.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <Memo(FormattedMessage)
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    title={
      <Memo(FormattedMessage)
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackLink
      to="/datasource/undefined/job"
    >
      <MemoizedFormattedMessage
        defaultMessage="Back"
        id="jobDetail.back"
      />
    </BackLink>
    <NextButton
      disabled={false}
      loading={false}
      onClick={[Function]}
    >
      <MemoizedFormattedMessage
        defaultMessage="Save"
        id="jobDetail.save"
      />
    </NextButton>
  </NavigationContainer>
</Fragment>
`;

exports[`JobDetail: Component should render correctly with loader 1`] = `
<Fragment>
  <MobileMenu
    headerSubtitle={
      <Memo(FormattedMessage)
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    headerTitle={
      <Memo(FormattedMessage)
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Projects"
            id="jobDetail.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <Memo(FormattedMessage)
        defaultMessage="Details"
        id="jobDetail.subTitle"
      />
    }
    title={
      <Memo(FormattedMessage)
        defaultMessage="Job"
        id="jobDetail.title"
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackLink
      to="/datasource/undefined/job"
    >
      <MemoizedFormattedMessage
        defaultMessage="Back"
        id="jobDetail.back"
      />
    </BackLink>
    <NextButton
      disabled={false}
      loading={false}
      onClick={[Function]}
    >
      <MemoizedFormattedMessage
        defaultMessage="Save"
        id="jobDetail.save"
      />
    </NextButton>
  </NavigationContainer>
</Fragment>
`;
